docs: add AI orchestration process and dependency links to README